--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
 
 
 <script src="scripts.js"></script>
+<link href="bootstrap.css" rel="stylesheet" media="screen">
 <style type="text/css">
     .main__greeting {
         font-family: "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
