--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
 
 <script src="scripts.js"></script>
-<link href="bootstrap.css" rel="stylesheet" media="screen">
+<link rel="stylesheet" href="./fonts/pt_sans.css">
 <style type="text/css">
     .main__greeting {
         font-family: "PT Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
